# data-structure

./: .gitignore  CMakeLists.txt  README.md  main.c
demo/: list_test.c  queue_test.c  queue_test.h  stack_test.c  stack_test.h
include/: base.h  list.h  queue.h  stack.h  tree.h
list/: list.c
src/base/: base.c
src/list/: list.c
src/queue/: queue.c
src/stack/: stack.c
src/tree/: stack.c
